--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen</title>
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="favicon" src="favicon.ico" type="image/x-ico"> 
+    <link rel="stylesheet" href="style.css"> <!-- Enlazamos la hoja de estilos -->
+    <link rel="favicon" src="favicon.ico" type="image/x-ico"> <!-- Añade un icono -->
 </head>
 <body>
     <header>
         <h1>Calculadora de área, perímetro y diagonal de un rectángulo</h1>
     </header>
-    <section> 
+    <section> <!-- Aquí van los label con sus inputs para meter datos -->
         <label class="lab" for="lenght">Longitud:</label>
         <input type="number" name="lenght" id="lenght" placeholder="Ingrese longitud"> <!-- El placeholder mete un mensaje dentro de la caja del input -->
         <br>
         <label class="lab" for="width">Ancho:</label>
         <input type="number" name="width" id="width" placeholder="Ingrese anchura">
     </section>
-    <footer> 
+    <footer> <!-- Aquí va el botón y las etiquetas de salida -->
         <button id="btn">Calcular</button>
         <p id="area"></p>
         <p id="perimeter"></p>
         <p id="diagonal"></p>
     </footer>
-    <script src="index.js"></script> 
+    <script src="index.js"></script> <!-- Enlazamos al JS -->
 </body>
 </html>
